--- a/Aurora/Dockerfile
+++ b/Aurora/Dockerfile
@@ -1,7 +1,7 @@
 FROM fusuf/whatsasena:latest
 
-RUN git clone https://github.com/Zenoixnoize/GARFIELD /root/GARFIELD
-WORKDIR /root/GARFIELD/
+RUN git clone https://github.com/Zenoixnoize/GARFIELD /root/WhatsAsenaDuplicated
+WORKDIR /root/WhatsAsenaDuplicated/
 ENV TZ=Asia/Colombo
 RUN npm install supervisor -g
 RUN yarn install --no-audit
