GARFIELD V6.0 BY NOIZE PROJECTS  🐼
GARFIELD V6.0 BY NOIZE PROJECTS  🐼

--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "GARFIELD",
+    "name": "GARFIELD BOT BY NOIZE v6.0",
     "description": "GARFIELD LATEST VERSION BY NOIZEPROJECTS.",
     "logo": "https://i.ibb.co/yYJy1bM/logo.png",
     "keywords": ["whatsapp", "userbot", "Garfield", "NOIZE", "bot", "api", "ZENOI", "Tharindu", "ai-bot", "Zenoixnoize", "ZENOI", "wabot noize", "wp bot"],
