GARFIELD V6.0 BY NOIZE PROJECTS  🐼
GARFIELD V6.0 BY NOIZE PROJECTS  🐼

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
     "name": "GARFIELD BOT BY NOIZE v6.0",
     "description": "GARFIELD LATEST VERSION BY NOIZEPROJECTS.",
     "logo": "https://i.ibb.co/yYJy1bM/logo.png",
-    "keywords": ["whatsapp", "userbot", "Garfield", "NOIZE", "bot", "api", "ZENOI", "Tharindu", "ai-bot", "Zenoixnoize", "ZENOI", "wabot noize", "wp bot"],
+    "keywords": ["whatsapp", "userbot", "Garfield", "NOIZE", "bot", "api", "ZENOI", "Tharindu", "ai-bot", "Zenoixnoize", "ZENOI", "wabot-noize", "wpbot"],
     "repository": "https://github.com/Zenoixnoize/GARFIELD-6.0",
     "website":   "https://t.me/ipandaproject",
     "success_url": "https://t.me/ipandaproject",
