--- a/Package.json
+++ b/Package.json
@@ -73,8 +73,7 @@
     "translatte": "^3.0.0",
     "wikijs": "^6.2.3",
     "yt-search": "^2.10.1",
-    "ytdl-core": "^4.8.3",
-    "aurora-npm": "^1.5.9"
+    "ytdl-core": "^4.8.3"
   }
 }
 
