--- a/app.json
+++ b/app.json
@@ -1,17 +1,55 @@
 {
-    "name": "GARFIELD WHATSAPP BOT",
-    "description": "GARFIELD LATEST VERSION BY NOIZEPROJECTS.",
+    "name": "GARFIELD BOT BY NOIZE v6.0",
+    "description": "GARFIELD WHATSAPP BOT IS EASILY CREAT AND USE.",
     "logo": "https://i.ibb.co/qmR14hQ/Pics-Art-22-03-18-19-34-01-459.png",
-    "keywords": ["whatsapp", "userbot", "Garfield", "NOIZE", "bot", "api", "ZENOI", "Tharindu", "ai-bot", "Zenoixnoize", "ZENOI", "wabot noize", "wp bot"],
+    "keywords": ["whatsapp", "userbot", "Secured", "speed", "bot", "best bot", "ai", "asena", "ai-bot", "NOIZE", "wabot", "wabot Fast", "ZENOI"],
     "repository": "https://github.com/Zenoixnoize/GARFIELD-6.0",
-    "website":   "https://t.me/ipandaproject",
-    "success_url": "https://t.me/ipandaproject",
+    "website":   "https://t.me/phaticusthiccy",
+    "success_url": "https://t.me/AsenaSupport",
     "stack": "container",
     "env": {
         "GARFIELD_SESSION": {
-            "description": "Enter Code You Reserved GARFIELD QR Linking.",
+            "description": "Qr.Js ile oluşturduğunuz özel session kodu. Type here yours Asena Session.",
             "required": true
-        
+        },
+        "SUDO": {
+            "description": "Kullanıcılara tüm yetkileri verir. It gives all the privileges to the users. => 90xxx,0,90xxx,0,90xxx...",
+            "required": false
+        },
+        "LANGUAGE": {
+            "description": "Bot language. Azerice => az, English => en, Türkçe => tr, Malayalam => ml, Hindi => HI, Indonesia => ID, Español => ES, Portuguese => pt, Russian => ru",
+            "required": true,
+            "value": "EN"
+        },
+        "PROXY": {
+            "description": "Proxy Adresi. Proxy Address => http://some-host:1234",
+            "required": false,
+            "value": "false"
+        },
+        "ANTI_LINK": {
+            "description": "Link Engelleme Sistemi. Link Blocking System.",
+            "required": true,
+            "value": "false"
+        },
+        "AUTO_BIO": {
+            "description": "Duruma otomatik tarih ve zaman eklemek için true yapın. Set true for auto date, time in biography.",
+            "required": true,
+            "value": "false"
+        },
+        "HANDLERS": {
+            "description": "Komutlar için. For commands.",
+            "required": true,
+            "value": "^[.!;]"
+        },
+       "NO_LOG": {
+            "description": "Hata logu görmek istemiyorsanız true yapın. Set true if you don't want to see error log.",
+            "required": true,
+            "value": "false"
+        },
+        "SEND_READ": {
+            "description": "Görüldü atmak istiyorsanız true yazın. Write true if you want to throw seen.",
+            "required": true,
+            "value": "true"
         },
         "HEROKU": {
             "description": "Herokuda çalışıyorsa true yazın. If it is running in Heroku, type true.",
@@ -19,28 +57,102 @@
             "value": "true"
         },
         "HEROKU_API_KEY": {
-            "description": "Enter your Heroku API ===> https://dashboard.heroku.com/account ",
+            "description": "Herokuda API Keyiniz. Heroku API Key. ===> https://t.me/herokuapikeyscraper",
             "required": true
+        },
+        "MUTE_MESSAGE": {
+            "description": "Düzenlenebilir Mute Mesajı. Customizable Mute Message! Use => default, to change back.",
+            "required": false,
+            "value": "default"
+        },
+        "BLOCK_CHAT": {
+            "description": "Choose in which chat the bot won't work there. Ex: 905xxxx && 905xxxx-1xxx or 905xxxx,905xxx...",
+            "required": false,
+            "value": "false"
+        },
+        "UNMUTE_MESSAGE": {
+            "description": "Düzenlenebilir Unmute Mesajı. Customizable Unmute Message! Use => default, to change back.",
+            "required": false,
+            "value": "default"
+        },
+        "BLOCK_MESSAGE": {
+            "description": "Düzenlenebilir Block Mesajı. Customizable Block Message! Use => default, to change back.",
+            "required": false,
+            "value": "default"
+        },
+        "UNBLOCK_MESSAGE": {
+            "description": "Düzenlenebilir Unblock Mesajı. Customizable Unblock Message! Use => default, to change back.",
+            "required": false,
+            "value": "default"
+        },
+        "WORK_TYPE": {
+            "description": "WhatsAsena Working Type. If you use “public”, everyone can use the bot. Else if you use “private”, only you can use your bot.",
+            "required": true,
+            "value": "private"
         },
         "HEROKU_APP_NAME": {
-            "description": "Re-enter the app name above ",
+            "description": "Herokuda uygulama adı. App Name ile aynı olmalıdır! Heroku APP Name. Must be the same as the App name!",
             "required": true
         },
+        "DEBUG": {
+            "description": "Geliştiricilere özeldir. For Developers => all, info, warn, fatal, error, debug, off",
+            "required": true,
+            "value": "false"
+        },
         "REMOVE_BG_API_KEY": {
-            "description": "Enter the API code here only if you need it Link - https://remove.bg",
+            "description": "Fotoğrafların arkaplanını kaldırır. https://remove.bg",
+            "value": "false",
+            "required": false
+        },
+        "DEEPAI_API_KEY": {
+            "description": "DeepAI Komutu İçin API Key. For DeepAI Command ===> https://github.com/Zenoixnoize/GARFIELD-6.0/wiki/DeepAI-API-Key",
             "value": "false",
             "required": false
         },
         "ALIVE_MESSAGE": {
-            "description": "Enter anything you want here ",
+            "description": "Customizable Alive Message! Use => default, to change back.",
             "required": false,
             "value": "default"
         },
-        "WELCOME_IMAGE": {
-            "description": "Enter link welcome Image",
+        "BAN_MESSAGE": {
+            "description": "Customizable Ban Message! Use => default, to change back.",
+            "required": false,
+            "value": "default"
+        },
+        "ADD_MESSAGE": {
+            "description": "Customizable Add Message! Use => default, to change back.",
+            "required": false,
+            "value": "default"
+        },
+        "KICKME_MESSAGE": {
+            "description": "Customizable Kickme Message! Use => default, to change back.",
+            "required": false,
+            "value": "default"
+        },
+        "PROMOTE_MESSAGE": {
+            "description": "Customizable Promote Message! Use => default, to change back.",
+            "required": false,
+            "value": "default"
+        },
+        "DEMOTE_MESSAGE": {
+            "description": "Customizable Demote Message! Use => default, to change back.",
+            "required": false,
+            "value": "default"
+        },
+        "AFK_MESSAGE": {
+            "description": "Customizable AFK Message! Use => default, to change back.",
+            "required": false,
+            "value": "default"
+        },
+        "GAN_IMAGE": {
+            "description": "Gan Style eklentisi için resim bağlantısı yazın. Type image link for Gan Style plugin.",
             "required": true,
-            "value": "https://i.ibb.co/qmR14hQ/Pics-Art-22-03-18-19-34-01-459.png"
-
+            "value": "https://i.hizliresim.com/loUtAb.jpg"
+        },
+        "NO_ONLINE": {
+            "description": "Çevrimiçi görünmek istemiyorsanız true yazın. Type true if you don't want to appear online.",
+            "required": false,
+            "value": "true"
         }
     },
     "addons": [{
