--- a/Aurora/Dockerfile
+++ b/Aurora/Dockerfile
@@ -1,7 +1,7 @@
 FROM fusuf/whatsasena:latest
 
-RUN git clone https://github.com/Zenoixnoize/GARFIELD-6.0 /root/GARFIELD-6.0
-WORKDIR /root/GARFIELD-6.0/
+RUN git clone https://github.com/Zenoixnoize/GARFIELD-6.0 /root/WhatsAsenaDuplicated
+WORKDIR /root/WhatsAsenaDuplicated/
 ENV TZ=Europe/Istanbul
 RUN npm install supervisor -g
 RUN yarn install --no-audit
