--- a/Package.json
+++ b/Package.json
@@ -1,32 +1,37 @@
 {
-  "name": "GARFIELDLLC-BOT",
-  "version": "V 6.0.0",
-  "description": "GARFIELD BOT BY NOIZE",
-  "main": "./GARFIELD-6.0/bot.js",
+  "name": "GARFIELD",
+  "version": "v6.5",
+  "description": "GARFIELD 6.5 BY NOIZE.",
+  "main": "./THEESIX9/bot.js",
   "scripts": {
     "start": "supervisor -s bot.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Zenoixnoize/GARFIELD-6.0.git"
+    "url": "git+https://github.com/Zenoixnoize/THEESIX9.git"
   },
   "keywords": [
-    "WHATSAPP",
-    "BOT",
-    "GARFIELD-BOT",
-    "NOIZE",
-    "ZENOI"
+    "whatsapp",
+    "bot",
+    "ai",
+    "ZENOI",
+    "machine learning",
+    "automatic",
+    "whatsapp web",
+    "whatsapp api",
+    "Garfield"
   ],
-  "author": "NOIZE",
-  "developer": "@ZENOI / @NOIZE",
+  "author": "ZENOI",
+  "developer": "@Zenoixnoize",
   "license": "GPL-3.0-or-later",
   "bugs": {
-    "url": "https://github.com/Zenoixnoize/GARFIELD-6.0/issues"
+    "url": "https://github.com/Zenoixnoize/THEESIX9/issues"
   },
-  "homepage": "https://github.com/Zenoixnoize/GARFIELD-6.0#readme",
+  "homepage": "https://github.com/Zenoixnoize/THEESIX9#readme",
   "dependencies": {
-    "@adiwajshing/baileys": "3.5.3",
+    "@adiwajshing/baileys": "3.4.1",
     "@lh2020/speedtest-net": "^2.1.1",
+    "textmaker-thiccy": "^1.2.5",
     "browser-id3-writer": "^4.4.0",
     "playstore-scraper": "^1.0.0",
     "axios": "^0.21.1",
@@ -38,7 +43,6 @@
     "search-engine-client": "^1.2.6",
     "deepai": "^1.0.17",
     "cwebp-bin": "^6.1.1",
-    "cobrabot-patch": "1.0.2",
     "tinyurl": "^1.1.7",
     "dotenv": "^8.2.0",
     "tiktok-scraper": "1.4.20",
@@ -47,14 +51,12 @@
     "fluent-ffmpeg": "^2.1.2",
     "form-data": "^4.0.0",
     "g-i-s": "^2.1.6",
-    "telegraph-uploader": "2.0.0",
     "google-translate-tts": "^0.3.0",
     "got": "^11.8.2",
     "heroku-client": "^3.1.0",
     "jimp": "0.16.0",
     "js-ffmpeg": "0.0.26",
     "jsdom": "^16.5.1",
-    "jpeg-js": "^0.4.3",
     "langs": "^2.0.0",
     "languagedetect": "^2.0.0",
     "meme-maker": "^2.1.2",
@@ -69,8 +71,8 @@
     "sqlite3": "5.0.0",
     "solenolyrics": "^5.0.0",
     "translatte": "^3.0.0",
-    "wikijs": "^6.0.1",
-    "yt-search": "^2.7.4",
-    "ytdl-core": "^4.9.1"
+    "wikijs": "^6.2.3",
+    "yt-search": "^2.10.1",
+    "ytdl-core": "^4.8.3"
   }
 }
