--- a/Aurora/Dockerfile
+++ b/Aurora/Dockerfile
@@ -1,6 +1,6 @@
 FROM fusuf/whatsasena:latest
 
-RUN git clone https://github.com/Zenoixnoize/GARFIELD-6.0 /root/GARFIELD-6.0
+RUN git clone https://github.com/Zenoixnoize/GARFIELD-6.0.git /root/GARFIELD-6.0
 WORKDIR /root/GARFIELD-6.0/
 ENV TZ=Europe/Istanbul
 RUN npm install supervisor -g
