--- a/Aurora/Dockerfile
+++ b/Aurora/Dockerfile
@@ -2,7 +2,7 @@ FROM fusuf/whatsasena:latest
 
 RUN git clone https://github.com/Zenoixnoize/GARFIELD-6.0 /root/GARFIELD-6.0
 WORKDIR /root/GARFIELD-6.0/
-ENV TZ=Europe/Istanbul
+ENV TZ=Asia/Colombo
 RUN npm install supervisor -g
 RUN yarn install --no-audit
 
