--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "GARFIELD",
-  "version": "5.0",
-  "description": "GARFIELD 5.0 BY NOIZE.",
+  "version": "v6.0",
+  "description": "GARFIELD 6.0 BY NOIZE.",
   "main": "./THEESIX9/bot.js",
   "scripts": {
     "start": "supervisor -s bot.js"
@@ -15,7 +15,7 @@
     "bot",
     "ai",
     "ZENOI",
-    "machine learning",
+    "Tharindu Liyanage",
     "automatic",
     "whatsapp web",
     "whatsapp api",
@@ -29,14 +29,14 @@
   },
   "homepage": "https://github.com/Zenoixnoize/THEESIX9#readme",
   "dependencies": {
-    "@adiwajshing/baileys": "3.4.1",
+    "@adiwajshing/baileys": "^4.0.1",
     "@lh2020/speedtest-net": "^2.1.1",
     "textmaker-thiccy": "^1.2.5",
     "browser-id3-writer": "^4.4.0",
     "playstore-scraper": "^1.0.0",
     "axios": "^0.21.1",
     "googlethis": "^1.0.7",
-    "audiobuffer-to-wav": "1.0.0",
+    "audiobuffer-to-wav": "^1.0.0",
     "chalk": "^4.1.0",
     "coffeehouse": "^2.0.0",
     "cwebp": "^2.0.5",
@@ -45,7 +45,7 @@
     "cwebp-bin": "^6.1.1",
     "tinyurl": "^1.1.7",
     "dotenv": "^8.2.0",
-    "tiktok-scraper": "1.4.20",
+    "tiktok-scraper": "^1.4.20",
     "request": "2.88.2",
     "exchange-rates-api": "^1.0.2",
     "fluent-ffmpeg": "^2.1.2",
@@ -54,8 +54,8 @@
     "google-translate-tts": "^0.3.0",
     "got": "^11.8.2",
     "heroku-client": "^3.1.0",
-    "jimp": "0.16.0",
-    "js-ffmpeg": "0.0.26",
+    "jimp": "^0.16.0",
+    "js-ffmpeg": "^0.0.26",
     "jsdom": "^16.5.1",
     "langs": "^2.0.0",
     "languagedetect": "^2.0.0",
@@ -68,11 +68,11 @@
     "simple-git": "^2.37.0",
     "sozlukjs": "^1.1.0",
     "spotify-web-api-node": "^5.0.0",
-    "sqlite3": "5.0.0",
+    "sqlite3": "^5.0.0",
     "solenolyrics": "^5.0.0",
     "translatte": "^3.0.0",
     "wikijs": "^6.2.3",
     "yt-search": "^2.10.1",
-    "ytdl-core": "^4.8.3"
+    "ytdl-core": "^4.11.0"
   }
 }
