GARFIELD V6.0 BY NOIZE PROJECTS  🐼
GARFIELD V6.0 BY NOIZE PROJECTS  🐼

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "GARFIELD BOT BY NOIZE v6.0",
-    "description": "GARFIELD WHATSAPP BOT IS EASILY CREAT AND USE.",
+    "description": "Garfield whatsapp bot by NOIZE DEVELOPERS CODED BY THARINDU LIYANAGE (ZENOI).",
     "logo": "https://i.ibb.co/qmR14hQ/Pics-Art-22-03-18-19-34-01-459.png",
     "keywords": ["whatsapp", "userbot", "Secured", "speed", "bot", "best bot", "ai", "asena", "ai-bot", "NOIZE", "wabot", "wabot Fast", "ZENOI"],
     "repository": "https://github.com/Zenoixnoize/GARFIELD-6.0",
