GARFIELD V6.0 BY NOIZE PROJECTS  🐼
GARFIELD V6.0 BY NOIZE PROJECTS  🐼

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "GARFIELD BOT v6.0",
+  "name": "Garfieldllcbot",
   "version": "v6.0",
   "description": "GARFIELD 5.0 BY NOIZE.",
   "main": "./GARFIELD-6.0/bot.js",
