--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "axios": "0.26.1",
     "googlethis": "^1.1.6",
     "audiobuffer-to-wav": "1.0.0",
-    "chalk": "5.0.1",
+    "chalk": "^4.1.0",
     "coffeehouse": "^2.0.0",
     "translatte": "^3.0.1",
     "cwebp": "^2.0.5",
@@ -55,7 +55,7 @@
     "form-data": "^4.0.0",
     "g-i-s": "^2.1.6",
     "google-translate-tts": "^0.3.0",
-    "got": "12.0.2",
+    "got": "^11.8.2",
     "heroku-client": "^3.1.0",
     "jimp": "0.16.0",
     "js-ffmpeg": "0.0.26",
