--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
     "name": "GARFIELD BOT BY NOIZE v6.0",
     "description": "GARFIELD WHATSAPP BOT FROM NOIZE DEVELOPERS CODED BY THARINDU LIYANAGE (ZENOI).",
     "logo": "https://i.ibb.co/G2bpd2B/Pics-Art-22-03-26-14-51-06-509.png",
-    "keywords": ["whatsapp", "userbot", "Secured", "speed", "bot", "best bot", "ai", "asena", "ai-bot", "NOIZE", "wabot", "wabot Fast", "ZENOI"],
+    "keywords": ["WHATSAPP", "HEROKU-BOT", "SECURED", "FAST", "AURORA-NPM", "SAFE WHATSAPP BOT", "GARFIELD-WHATSAPP", "NOIZE", "BESTBOT", "NOIZE", "WHATSAPP", "GITHUB", "ZENOI"],
     "repository": "https://github.com/Zenoixnoize/GARFIELD-6.0",
     "website":   "https://garfieldbot.yolasite.com/",
     "success_url": "https://github.com/Zenoixnoize/GARFIELD-6.0",
@@ -26,7 +26,7 @@
             "required": true
         },
         "DEPLOYER": {
-            "description": "Enter You name",
+            "description": "Enter Your name",
             "required": false,
             "value": "User 97626"
         }
