--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Garfieldllcbot",
-  "version": "v6.0",
+  "version": "1.0",
   "description": "GARFIELD 5.0 BY NOIZE.",
   "main": "./GARFIELD-6.0/bot.js",
   "scripts": {
