GARFIELD V6.0 BY NOIZE PROJECTS 🐼
GARFIELD V6.0 BY NOIZE PROJECTS 🐼

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodx",
+  "name": "xwa-api",
   "version": "1.0.0",
   "description": "GARFIELD 6.0 BY NOIZE.",
   "main": "./GARFIELD-6.0/bot.js",
