GARFIELD V6.0 BY NOIZE PROJECTS 🐼
GARFIELD V6.0 BY NOIZE PROJECTS 🐼

--- a/app.json
+++ b/app.json
@@ -8,6 +8,11 @@
     "success_url": "https://github.com/Zenoixnoize/GARFIELD-6.0",
     "stack": "container",
     "env": {
+         "HEROKU": {
+            "description": "Do not change.",
+            "required": true,
+            "value": "true"
+        },
         "GARFIELD_SESSION": {
             "description": "Enter the code you received when you Linked Garfield QR here",
             "required": true
