GARFIELD V6.0 BY NOIZE PROJECTS 🐼
GARFIELD V6.0 BY NOIZE PROJECTS 🐼

--- a/heroku.yml
+++ b/heroku.yml
@@ -1,5 +1,5 @@
 build:
   docker:
-      worker: /Aurora/Dockerfile
+      worker: /HostDev/Server/Explore/x2838999/Appx/Dockerfile
 run:
    worker: npm start
