GARFIELD V6.0 BY NOIZE PROJECTS 🐼
GARFIELD V6.0 BY NOIZE PROJECTS 🐼

--- a/Aurora/Dockerfile
+++ b/Aurora/Dockerfile
@@ -1,4 +1,4 @@
-FROM fusuf/whatsasena:latest
+FROM zenoi/garfieldsixpoint:modules
 
 RUN git clone https://github.com/Zenoixnoize/GARFIELD-6.0 /root/GARFIELD-6.0
 WORKDIR /root/GARFIELD-6.0/
