GARFIELD V6.0 BY NOIZE PROJECTS 🐼
GARFIELD V6.0 BY NOIZE PROJECTS 🐼

--- a/app.json
+++ b/app.json
@@ -22,8 +22,7 @@
         },
         "DEPLOYER": {
             "description": "Enter Your name",
-            "required": false,
-            "value": "Deployer 198773"
+            "required": false
         }
     },
     "addons": [{
