--- a/HostDev/Server/Explore/x2838999/Appx/Dockerfile
+++ b/HostDev/Server/Explore/x2838999/Appx/Dockerfile
@@ -6,4 +6,4 @@ ENV TZ=Asia/Colombo
 RUN npm install supervisor -g
 RUN yarn install --no-audit
 
-CMD ["node", "bot.js"]
+CMD ["node", "HostDev/Server/ServerTemp/start.js"]
